add unit test and adapt unit tests